[gd_scene load_steps=27 format=2]

[ext_resource path="res://OnFootAssets/Enemies/Brown/OrangeMinion.png" type="Texture" id=1]
[ext_resource path="res://OnFootAssets/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://OnFootAssets/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://OnFootAssets/Hitboxes-Hurtboxes/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://OnFootAssets/Hitboxes-Hurtboxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://OnFootAssets/Enemies/Brown/BrownEnemy.gd" type="Script" id=6]
[ext_resource path="res://OnFootAssets/Enemies/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://OnFootAssets/Hitboxes-Hurtboxes/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://OnFootAssets/Enemies/Brown/OrangeMinionExplode.png" type="Texture" id=9]
[ext_resource path="res://OnFootAssets/Enemies/Brown/Sprite0.gd" type="Script" id=10]
[ext_resource path="res://OnFootAssets/Assets/noiseTexture.png" type="Texture" id=11]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D dissolve_texture : hint_albedo;
uniform float dissolve_value : hint_range(0,1);

void fragment(){
    vec4 main_texture = texture(TEXTURE, UV);
    vec4 noise_texture = texture(dissolve_texture, UV);
    main_texture.a *= floor(dissolve_value + min(1, noise_texture.x));
    COLOR = main_texture;
}"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 1 )
shader_param/dissolve_value = 1.0
shader_param/dissolve_texture = ExtResource( 11 )

[sub_resource type="Animation" id=16]
resource_name = "Harvest"
length = 3.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "completed_harvest"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite0:material:shader_param/dissolve_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.75, 0.25 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite0:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite0:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite0:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite0:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "jump_started"
}, {
"args": [  ],
"method": "jump_ended"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite0:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite0:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite0:material:shader_param/dissolve_value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="CapsuleShape2D" id=17]
radius = 4.0
height = 5.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 5.0

[sub_resource type="CircleShape2D" id=3]
radius = 157.678

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.0
height = 3.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 30, 27 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 30, 0, 30, 27 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 60, 0, 30, 27 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 12.5

[node name="BrownEnemy" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 16
script = ExtResource( 6 )
map_size = 200

[node name="Sprite0" type="Sprite" parent="."]
material = SubResource( 15 )
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )
hframes = 2
frame = 1
script = ExtResource( 10 )

[node name="DeathTween" type="Tween" parent="Sprite0"]

[node name="Sprite1" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )
hframes = 2
frame = 1

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite1"]

[node name="Sprite2" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )
hframes = 2
frame = 1

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite2"]

[node name="Sprite3" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )
hframes = 2
frame = 1

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite3"]

[node name="Sprite4" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )
hframes = 2
frame = 1

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite4"]

[node name="Sprite5" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )
hframes = 2
frame = 1

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite5"]

[node name="Sprite6" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )
hframes = 2
frame = 1

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite6"]

[node name="Sprite7" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )
hframes = 2
frame = 1

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite7"]

[node name="Sprite8" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )
hframes = 2
frame = 1

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite8"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Harvest = SubResource( 16 )
anims/Idle = SubResource( 8 )
anims/Jump = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.5, -4 )
rotation = 1.5708
shape = SubResource( 17 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( -0.5, -4 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]
visible = false

[node name="DetectionArea" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( -0.5, -4 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="WanderController" parent="." instance=ExtResource( 7 )]
visible = false
wander_range = 16

[node name="ExplodeSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -9.53674e-07 )
frames = SubResource( 12 )
offset = Vector2( 0, -13 )

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
visible = false
collision_mask = 4
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 14 )

[node name="brownAudio" type="AudioStreamPlayer2D" parent="."]
max_distance = 150.0
bus = "SoundEffects"

[connection signal="frame_changed" from="Sprite0" to="Sprite0" method="_on_Sprite0_frame_changed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="animation_finished" from="ExplodeSprite" to="." method="_on_ExplodeSprite_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="damage_dealt" from="Hitbox" to="." method="_on_Hitbox_damage_dealt"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
[editable path="Hitbox"]
